--- a/src/API/CombatAnalysis.Hubs/appsettings.Development.json
+++ b/src/API/CombatAnalysis.Hubs/appsettings.Development.json
@@ -6,7 +6,6 @@
     "Audience": "client1"
   },
   "Cors": {
-    "WebApp": "https://localhost:44479",
-    "Hubs": "https://localhost:7026"
+    "WebApp": "https://localhost:44479"
   }
 }
