--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -1,9 +1,9 @@
 {
-  "CombatParserApiPort": "http://api-combat-parser-api-service.api.svc.cluster.local/",
-  "UserApiPort": "http://api-user-api-service.api.svc.cluster.local/",
-  "ChatApiPort": "http://api-chat-api-service.api.svc.cluster.local/",
-  "CommunicationApiPort": "http://api-communication-api-service.api.svc.cluster.local/",
-  "IdentityPort": "http://identity-service.identity.svc.cluster.local/",
+  "CombatParserApiPort": "http://192.168.49.2:30004/",
+  "UserApiPort": "http://192.168.49.2:30001/",
+  "ChatApiPort": "http://192.168.49.2:30003/",
+  "CommunicationApiPort": "http://192.168.49.2:30002/",
+  "IdentityPort": "http://192.168.49.2:30101/",
   "Authentication": {
     "ClientId": "client1",
     "ClientScope": "client1scope",
@@ -18,7 +18,7 @@
       "Authorization": "authorizationCode",
       "RefreshToken": "refreshToken"
     },
-    "Authority": "http://localhost:5090/",
+    "Authority": "https://identity.analysis.com/",
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Audience": "client1"
   }
