--- a/charts/hubs/templates/service.yaml
+++ b/charts/hubs/templates/service.yaml
@@ -1,16 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-{{ .Values.app6.name }}-service
+  name: {{ .Release.Name }}-service
   labels:
     env: {{ .Values.env }}
     owner: OlegFedosov
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
-    app: {{ .Release.Name }}-{{ .Values.app6.name }}
+    app: {{ .Release.Name }}
   ports:
     - name: http
       protocol: {{ .Values.service.protocol }}
       port: {{ .Values.service.port }}
       targetPort:  {{ .Values.service.targetPort }}
+      nodePort: {{ .Values.service.nodePort }}
