--- a/src/API/CombatAnalysis.Hubs/appsettings.Production.json
+++ b/src/API/CombatAnalysis.Hubs/appsettings.Production.json
@@ -1,12 +1,11 @@
 {
-  "ChatApiPort": "https://localhost:5007/",
+  "ChatApiPort": "https://api.analysis.chat.com/",
   "Authentication": {
-    "Authority": "http://localhost:5090/",
+    "Authority": "https://identity.analysis.com/",
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Audience": "client1"
   },
   "Cors": {
-    "WebApp": "https://localhost:44479",
-    "Hubs": "https://localhost:7026"
+    "WebApp": "https://encounters.analysis.com"
   }
 }
