--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -56,6 +56,7 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "ajv": "^8.11.0",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-config-react-app": "^7.0.1",
