--- a/charts/api-chart/templates/ingress.yaml
+++ b/charts/api-chart/templates/ingress.yaml
@@ -7,53 +7,53 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: {{ .Values.app1.hostName }}
+    - host: {{ .Values.user.ingress.host }}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{ .Release.Name }}-{{ .Values.app1.name }}-service
+                name: {{ .Release.Name }}-{{ .Values.user.name }}-service
                 port:
-                  number: {{ .Values.app2.ingress.port }}
-    - host: {{ .Values.app2.hostName }}
+                  number: {{ .Values.user.ingress.port }}
+    - host: {{ .Values.communication.ingress.host }}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{ .Release.Name }}-{{ .Values.app2.name }}-service
+                name: {{ .Release.Name }}-{{ .Values.communication.name }}-service
                 port:
-                  number: {{ .Values.app2.ingress.port }}
-    - host: {{ .Values.app3.hostName }}
+                  number: {{ .Values.communication.ingress.port }}
+    - host: {{ .Values.chat.ingress.host }}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{ .Release.Name }}-{{ .Values.app3.name }}-service
+                name: {{ .Release.Name }}-{{ .Values.chat.name }}-service
                 port:
-                  number: {{ .Values.app3.ingress.port }}
-    - host: {{ .Values.app4.hostName }}
+                  number: {{ .Values.chat.ingress.port }}
+    - host: {{ .Values.parser.ingress.host }}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{ .Release.Name }}-{{ .Values.app4.name }}-service
+                name: {{ .Release.Name }}-{{ .Values.parser.name }}-service
                 port:
-                  number: {{ .Values.app4.ingress.port }}
-    - host: {{ .Values.app5.hostName }}
+                  number: {{ .Values.parser.ingress.port }}
+    - host: {{ .Values.health.ingress.host }}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{ .Release.Name }}-{{ .Values.app5.name }}-service
+                name: {{ .Release.Name }}-{{ .Values.health.name }}-service
                 port:
-                  number: {{ .Values.app5.ingress.port }}
+                  number: {{ .Values.health.ingress.port }}
