--- a/charts/identity-chart/templates/service.yaml
+++ b/charts/identity-chart/templates/service.yaml
@@ -10,8 +10,7 @@ spec:
   selector:
     app: {{ .Release.Name }}
   ports:
-    - name: http
-      protocol: {{ .Values.service.protocol }}
+    - protocol: TCP
       port: {{ .Values.service.port }}
       targetPort:  {{ .Values.service.targetPort }}
       nodePort: {{ .Values.service.nodePort }}
