--- a/charts/identity-chart/values.yaml
+++ b/charts/identity-chart/values.yaml
@@ -1,22 +1,20 @@
 env: dev
 replicas: 2
+resources:
+    cpu: 80
+    memory: 80
 autoscaling: 
     enabled: true
     min: 2
     max: 6
-resources:
-    cpu: 80
-    memory: 80
 container:
     name: identity
     image: solinx/combatanalysisidentity
-    tag: 0.3.0
     port: 80
 service:
-    protocol: TCP
     port: 80
     targetPort: 8080
     nodePort: 30101
 ingress:
-    appName: identity.analysis.com
+    host: identity.analysis.com
     port: 80
