--- a/charts/web-app-chart/templates/webAppIngress.yaml
+++ b/charts/web-app-chart/templates/webAppIngress.yaml
@@ -1,26 +1,26 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-ingress
+  name: {{ .Values.webApp.name }}-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
     nginx.ingress.kubernetes.io/proxy-buffering: "off"
 spec:
-  ingressClassName: nginx
   tls:
   - hosts:
-    - {{ .Values.ingress.host }}
+      - {{ .Values.webApp.ingress.host }}
     secretName: tls-secret
   rules:
-  - host: {{ .Values.ingress.host }}
+  - host: {{ .Values.webApp.ingress.host }}
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
-              name: {{ .Release.Name }}-service
+              name: {{ .Values.webApp.name }}-service
               port:
-                number: {{ .Values.ingress.port }}
+                number: {{ .Values.webApp.ingress.port }}
