--- a/charts/identity-chart/templates/ingress.yaml
+++ b/charts/identity-chart/templates/ingress.yaml
@@ -3,9 +3,12 @@ kind: Ingress
 metadata:
   name: {{ .Release.Name }}-ingress
 spec:
-  ingressClassName: nginx
+  tls:
+  - hosts:
+      - {{ .Values.ingress.host }}
+    secretName: tls-secret
   rules:
-  - host: {{ .Values.ingress.appName }}
+  - host: {{ .Values.ingress.host }}
     http:
       paths:
         - path: /
