--- a/charts/web-app-chart/templates/webAppIngress.yaml
+++ b/charts/web-app-chart/templates/webAppIngress.yaml
@@ -3,11 +3,7 @@ kind: Ingress
 metadata:
   name: {{ .Values.webApp.name }}-ingress
   annotations:
-    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
-    nginx.ingress.kubernetes.io/proxy-buffering: "off"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   tls:
   - hosts:
