--- a/src/CombatAnalysis.WebApp/ClientApp/.env.production
+++ b/src/CombatAnalysis.WebApp/ClientApp/.env.production
@@ -6,7 +6,7 @@ REACT_APP_IDENTITY_SERVER_VERIFY_EMAIL_PATH=initVerification
 REACT_APP_CHAT_PAGE_SIZE=50
 REACT_APP_COMMUNITY_PAGE_SIZE=10
 REACT_APP_COMMUNITY_POST_PAGE_SIZE=10
-REACT_APP_HUBS_URL=https://api.hub.chats.com/
+REACT_APP_HUBS_URL=https://hubs.analysis.com/
 REACT_APP_HUBS_PERSONAL_CHAT_ADDRESS=personalChatHub
 REACT_APP_HUBS_PERSONAL_CHAT_MESSAGES_ADDRESS=personalChatMessagesHub
 REACT_APP_HUBS_PERSONAL_CHAT_UNREAD_MESSAGES_ADDRESS=personalChatUnreadMessageHub
