--- a/src/CombatAnalysis.WebApp/appsettings.Development.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Development.json
@@ -5,6 +5,7 @@
   "CommunicationApiPort": "https://localhost:5009/",
   "IdentityPort": "http://localhost:5090/",
   "Authentication": {
+    "CookieDomain": "localhost",
     "ClientId": "client3",
     "ClientScope": "client3scope",
     "RedirectUri": "localhost:44479/callback",
