--- a/src/CombatAnalysis.WebApp/appsettings.Production.json
+++ b/src/CombatAnalysis.WebApp/appsettings.Production.json
@@ -1,10 +1,11 @@
 {
-  "CombatParserApiPort": "http://192.168.49.2:30004/",
-  "UserApiPort": "http://192.168.49.2:30001/",
-  "ChatApiPort": "http://192.168.49.2:30003/",
-  "CommunicationApiPort": "http://192.168.49.2:30002/",
-  "IdentityPort": "http://192.168.49.2:30101/",
+  "CombatParserApiPort": "https://api.parser.analysis.com/",
+  "UserApiPort": "https://api.user.analysis.com/",
+  "ChatApiPort": "https://api.chat.analysis.com/",
+  "CommunicationApiPort": "https://api.communication.analysis.com/",
+  "IdentityPort": "https://identity.analysis.com/",
   "Authentication": {
+    "CookieDomain": ".analysis.com",
     "ClientId": "client1",
     "ClientScope": "client1scope",
     "RedirectUri": "encounters.analysis.com/callback",
