--- a/src/API/CombatAnalysis.Hubs/appsettings.Production.json
+++ b/src/API/CombatAnalysis.Hubs/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
-  "ChatApiPort": "https://api.analysis.chat.com/",
+  "ChatApiPort": "https://api.chat.analysis.com/",
   "Authentication": {
     "Authority": "https://identity.analysis.com/",
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
