--- a/charts/api-chart/templates/healthDeployment.yaml
+++ b/charts/api-chart/templates/healthDeployment.yaml
@@ -26,6 +26,8 @@ spec:
           env:
            - name: ASPNETCORE_ENVIRONMENT
              value: {{ .Values.env }}
+           - name: ConnectionStrings_DefaultConnection
+             value: "Server=host.docker.internal,1433;Database=Combat_Analysis.Identity;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
            - name: Authentication_Issuer
              value: "https://identity.analysis.com/"
            - name: Authentication_IssuerSigningKey
