Fix Desktop app connection issue
Fixed Desktop app connection issue to API

--- a/src/API/CombatAnalysis.Hubs/appsettings.Development.json
+++ b/src/API/CombatAnalysis.Hubs/appsettings.Development.json
@@ -10,7 +10,8 @@
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Authority": "http://localhost:5090/",
     "Client": {
-      "ClientId": "client3",
+      "WebClientId": "client3",
+      "DesktopClientId": "client2",
       "Scope": "client3scope"
     }
   }
