--- a/src/CombatAnalysis.App/appsettings.Development.json
+++ b/src/CombatAnalysis.App/appsettings.Development.json
@@ -1,13 +1,13 @@
 {
-  "ApiPort": {
+  "API": {
     "CombatParser": "https://localhost:5001/",
     "User": "https://localhost:5003/",
     "Chat": "https://localhost:5007/",
     "Communication": "https://localhost:5009/",
-    "Identity": "http://localhost:5090/"
+    "Identity": "https://localhost:7064/"
   },
   "Hubs": {
-    "Port": "https://localhost:7026/",
+    "Server": "https://localhost:7026/",
     "PersonalChatAddress": "personalChatHub",
     "PersonalChatMessagesAddress": "personalChatMessagesHub",
     "PersonalChatUnreadMessageAddress": "personalChatUnreadMessageHub",
