--- a/src/CombatAnalysis.App/appsettings.Production.json
+++ b/src/CombatAnalysis.App/appsettings.Production.json
@@ -1,13 +1,13 @@
 {
-  "ApiPort": {
-    "CombatParser": "https://localhost:5001/",
-    "User": "https://localhost:5003/",
-    "Chat": "https://localhost:5007/",
-    "Communication": "https://localhost:5009/",
-    "Identity": "http://localhost:5090/"
+  "API": {
+    "CombatParser": "https://api.parser.analysis.com/",
+    "User": "https://api.user.analysis.com/",
+    "Chat": "https://api.chat.analysis.com/",
+    "Communication": "https://api.communication.analysis.com/",
+    "Identity": "https://identity.analysis.com/"
   },
   "Hubs": {
-    "Port": "https://localhost:7026/",
+    "Server": "https://hubs.analysis.com/",
     "PersonalChatAddress": "personalChatHub",
     "PersonalChatMessagesAddress": "personalChatMessagesHub",
     "PersonalChatUnreadMessageAddress": "personalChatUnreadMessageHub",
