--- a/charts/web-app-chart/templates/hubsDeployment.yaml
+++ b/charts/web-app-chart/templates/hubsDeployment.yaml
@@ -36,7 +36,9 @@ spec:
              value: "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ="
            - name: Authentication_Authority
              value: "https://identity.analysis.com/"
-           - name: Authentication_Client_ClientId
+           - name: Authentication_Client_WebClientId
              value: "client1"
+           - name: Authentication_Client_DesktopClientId
+             value: "client2"
            - name: Authentication_Client_Scope
              value: "client1scope"
