--- a/src/API/CombatAnalysis.ChatApi/appsettings.Production.json
+++ b/src/API/CombatAnalysis.ChatApi/appsettings.Production.json
@@ -15,7 +15,8 @@
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Authority": "https://identity.analysis.com/",
     "Client": {
-      "ClientId": "client3",
+      "WebClientId": "client3",
+      "DesktopClientId": "client2",
       "Scope": "client3scope"
     }
   }
