--- a/charts/api-chart/templates/deployments/healthDeployment.yaml
+++ b/charts/api-chart/templates/deployments/healthDeployment.yaml
@@ -27,14 +27,32 @@ spec:
            - name: ASPNETCORE_ENVIRONMENT
              value: {{ .Values.env }}
            - name: ConnectionStrings_DefaultConnection
-             value: "Server=host.docker.internal,1433;Database=Combat_Analysis.Identity;User Id=sa;Password=Oleg123;Integrated Security=False;Connect Timeout=120;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+             valueFrom:
+               secretKeyRef:
+                name: identity-db-connection-strings
+                key: defaultConnection
            - name: Authentication_Issuer
-             value: "https://identity.analysis.com/"
+             valueFrom:
+               secretKeyRef:
+                name: authentication
+                key: issuer
            - name: Authentication_IssuerSigningKey
-             value: "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ="
+             valueFrom:
+               secretKeyRef:
+                name: authentication
+                key: issuerSigningKey
            - name: Authentication_Authority
-             value: "https://identity.analysis.com/"
+             valueFrom:
+               secretKeyRef:
+                name: authentication
+                key: authority
            - name: Authentication_Client_ClientId
-             value: "client1"
+             valueFrom:
+               secretKeyRef:
+                name: client
+                key: webClientId
            - name: Authentication_Client_Scope
-             value: "client1scope"
+             valueFrom:
+               secretKeyRef:
+                name: client
+                key: scope
