--- a/charts/web-app-chart/templates/hubsDeployment.yaml
+++ b/charts/web-app-chart/templates/hubsDeployment.yaml
@@ -31,14 +31,32 @@ spec:
            - name: Cluster_Chat
              value: "http://api-chat-service.api.svc.cluster.local/"
            - name: Authentication_Issuer
-             value: "https://identity.analysis.com/"
+             valueFrom:
+               secretKeyRef:
+                name: authentication
+                key: issuer
            - name: Authentication_IssuerSigningKey
-             value: "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ="
+             valueFrom:
+               secretKeyRef:
+                name: authentication
+                key: issuerSigningKey
            - name: Authentication_Authority
-             value: "https://identity.analysis.com/"
+             valueFrom:
+               secretKeyRef:
+                name: authentication
+                key: authority
            - name: Authentication_Client_WebClientId
-             value: "client1"
+             valueFrom:
+               secretKeyRef:
+                name: client
+                key: webClientId
            - name: Authentication_Client_DesktopClientId
-             value: "client2"
+             valueFrom:
+               secretKeyRef:
+                name: client
+                key: desktopClientId
            - name: Authentication_Client_Scope
-             value: "client1scope"
+             valueFrom:
+               secretKeyRef:
+                name: client
+                key: scope
