--- a/src/API/CombatAnalysis.CommunicationAPI/appsettings.Development.json
+++ b/src/API/CombatAnalysis.CommunicationAPI/appsettings.Development.json
@@ -9,12 +9,12 @@
     "DataProcessingType": "StoredProcedure"
   },
   "API": {
-    "Identity": "http://localhost:5090/"
+    "Identity": "https://localhost:7064/"
   },
   "Authentication": {
-    "Issuer": "http://localhost:5090/",
+    "Issuer": "https://localhost:7064/",
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
-    "Authority": "http://localhost:5090/",
+    "Authority": "https://localhost:7064/",
     "Client": {
       "WebClientId": "client3",
       "DesktopClientId": "client2",
