Fix CombatParser library
Fix CombatParser library when user doesn't has any SpecId and this broke library

--- a/charts/web-app-chart/templates/webAppDeployment.yaml
+++ b/charts/web-app-chart/templates/webAppDeployment.yaml
@@ -59,10 +59,10 @@ spec:
            - name: Authentication_Client_ClientId
              valueFrom:
                secretKeyRef:
-                name: client
+                name: web-client
                 key: webClientId
            - name: Authentication_Client_Scope
              valueFrom:
                secretKeyRef:
-                name: client
+                name: web-client
                 key: scope
