--- a/charts/web-app-chart/templates/hubsDeployment.yaml
+++ b/charts/web-app-chart/templates/hubsDeployment.yaml
@@ -48,15 +48,15 @@ spec:
            - name: Authentication_Client_WebClientId
              valueFrom:
                secretKeyRef:
-                name: client
+                name: web-client
                 key: webClientId
            - name: Authentication_Client_DesktopClientId
              valueFrom:
                secretKeyRef:
-                name: client
+                name: web-client
                 key: desktopClientId
            - name: Authentication_Client_Scope
              valueFrom:
                secretKeyRef:
-                name: client
+                name: web-client
                 key: scope
