--- a/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Development.json
@@ -19,6 +19,15 @@
       "RefreshToken": "refreshToken"
     }
   },
+  "Smtp": {
+    "Host": "localhost",
+    "Port": 25,
+    "EnableSsl": false,
+    "UseDefaultCredentials": true,
+    "DisplayName": "Combat Analysis",
+    "Email": "myapp.email@local.by",
+    "Password": "testPass11ord123*/"
+  },
   "Certificate": {
     "PfxPath": "F:\\certs\\certificate.pfx",
     "PWD": "*Ter887YU/le/9+Last?"
