--- a/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
+++ b/src/Identity/CombatAnalysisIdentity/appsettings.Production.json
@@ -19,6 +19,15 @@
       "RefreshToken": "refreshToken"
     }
   },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "UseDefaultCredentials": false,
+    "DisplayName": "Combat Analysis",
+    "Email": "test@yandex.by",
+    "Password": "testPass11ord123*/"
+  },
   "Certificate": {
     "PfxPath": "F:\\certs\\prod\\certificate.pfx",
     "PWD": "*Ter887YU/le/9+Last?"
