--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -9,6 +9,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@microsoft/signalr": "^8.0.7",
     "@reduxjs/toolkit": "^1.9.0",
+    "@types/node": "^22.13.1",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
@@ -55,6 +58,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@types/uuid": "^10.0.0",
     "ajv": "^8.11.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
@@ -68,7 +72,7 @@
     "nodemon": "^3.0.3",
     "readable-stream": "^4.5.2",
     "redux-mock-store": "^1.5.4",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
