--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -58,6 +58,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/redux-mock-store": "^1.5.0",
     "@types/uuid": "^10.0.0",
     "ajv": "^8.11.0",
     "copyfiles": "^2.4.1",
