--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -36,11 +36,11 @@
   <ItemGroup>
     <Folder Include="ClientApp\public\locales\en\identity\" />
     <Folder Include="ClientApp\public\locales\ru\identity\" />
-    <Folder Include="ClientApp\src\components\communication\events\" />
     <Folder Include="ClientApp\src\styles\common\" />
     <Folder Include="ClientApp\src\styles\identity\" />
     <Folder Include="ClientApp\src\types\components\communication\create\" />
     <Folder Include="ClientApp\src\types\components\communication\community\" />
+    <Folder Include="ClientApp\src\types\components\communication\myEnvironment\" />
     <Folder Include="ClientApp\src\types\components\communication\people\" />
   </ItemGroup>
 
